# polymarket-trading

./: .flake8  .gitignore  LICENSE  README.md  dev_requirements.txt  requirements.txt  setup.cfg  trade.py
.github/workflows/: integration-tests.yml  linting.yml  publish-to-test-pypi.yml
polymarket/: __init__.py  __main__.py  buy.py  cli.py  liquidity.py  markets.py  merge.py  positions.py  redeem.py  sell.py  split.py  transfer.py  utils.py
polymarket/abi/: ConditionalTokens.json  ERC1155.json  FixedProductMarketMaker.json
polymarket/amm/: __init__.py  maths.py
polymarket/gql/: positions.gql
tests/: router02.json  test_polymarket.py  test_swap.py  weth9.json
