[metadata]
name = polymarket_trading
version = 0.0.8
author = PolyTrader
description = A collection of tools for trading on polymarket.com
url = https://github.com/PolyTrader/trade-cli

[options]
packages=polymarket,polymarket.abi
include_package_data=True
python_requires = >=3.6
install_requires =
    web3
    importlib_resources
    eth_account
    requests
    gql

[options.package_data]
* = *.json

[options.entry_points]
console_scripts =
  pm-trade = polymarket.cli:main
