[metadata]
name = polymarket_trading
version = 0.1.3
author = PolyTrader
description = A collection of tools for trading on polymarket.com
long_description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/PolyTrader/polymarket-trading
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=polymarket,polymarket.abi,polymarket.gql
include_package_data = True
python_requires = >=3.6
install_requires =
    web3
    importlib_resources
    eth_account
    requests
    gql

[options.package_data]
polymarket.abi = *.json
polymarket.gql = *.gql

[options.entry_points]
console_scripts =
  pm-trade = polymarket.cli:main
